--- a/pom.xml
+++ b/pom.xml
@@ -15,23 +15,25 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/net.dv8tion/JDA -->
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.0.0-beta.20</version>
+            <version>LATEST</version>
         </dependency>
-        <!-- https://central.sonatype.com/artifact/io.github.cdimascio/dotenv-java -->
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
-            <version>3.0.0</version>
+            <version>LATEST</version>
         </dependency>
-        <!-- https://central.sonatype.com/artifact/org.quartz-scheduler/quartz/2.3.2 -->
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.5.0-rc1</version>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>net.redhogs.cronparser</groupId>
+            <artifactId>cron-parser-core</artifactId>
+            <version>3.5</version>
         </dependency>
     </dependencies>
 
