--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,17 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>LATEST</version>
+            <version>5.0.0-beta.20</version>
         </dependency>
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
-            <version>LATEST</version>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>LATEST</version>
+            <version>2.5.0-rc1</version>
         </dependency>
         <dependency>
             <groupId>net.redhogs.cronparser</groupId>
