--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,14 @@
             <version>2.5.0-rc1</version>
         </dependency>
         <dependency>
-            <groupId>net.redhogs.cronparser</groupId>
-            <artifactId>cron-parser-core</artifactId>
-            <version>3.5</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.1.0-alpha1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.1.0-alpha1</version>
         </dependency>
     </dependencies>
 
